--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 			<h3 id = "info"></h3>
 		</div>
 
-		<div id = "country_names" class = "container"></div>
-		<div id = "visual_container" class = "container"></div>
 
+
+<!--		<div id = "country_names" class = "container"></div>-->
+		<div id = "visual_container" class = "container"></div>
 
 <!--		<div id = "wrapper_upper">-->
 <!--			<div id = "upper_scroll"></div>-->
 <!--		</div>-->
 
 <!--		<div id = "wrapper_lower">-->
-<!--			<div id = "vis_container" class = "container" ></div>-->
+<!--			<div id = "visual_container" class = "container"></div>-->
 <!--		</div>-->
 
 
