legend, showing all values

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		<div class="row">
 			<h3 id = "info"></h3>
-			<h4 style="text-align:center;"> The left edge of every flag represents the position of the value. The numbers are shown in the following order [Life Expectancy, BMI, GDP, Income Composition of Resources, Schooling].</h4>
+			<h4 style="text-align:center;"> The left edge of every flag represents the position of the value. The numbers are shown in the following order [Life Expectancy, BMI, GDP, Income Composition of Resources, Schooling].The ticks on the left side of the line show the position of the lowest value, and the ticks on the right side show the position of the highest value.</h4>
 			<div id = "legend" class = "container">
 				<div class = "row">
 					<h5 class = "col-xs-2" style="font-weight:bold;">Legend</h5>
