interaction 1: sorting order working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<div class = "row d-flex" id="button_row" >
 			<div class = "col-xs-1 text-right">
-				<p>Order Flags By: </p>
+				<p>Line Scale Based On: </p>
 			</div>
 			<div class = "col-xs-2 text-center">
 				<button id = "LE" class = "btn btn-primary">Life Expectancy Data</button>
@@ -133,6 +133,24 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class = "row d-flex" id="sort_row" >
+			<div class = "col-xs-1 text-right">
+				<p>Sort Countries: </p>
+			</div>
+			<div class = "col-xs-1 text-center">
+				<button id = "ALPH" class = "btn btn-secondary btn-sm">Alphabetically</button>
+			</div>
+
+			<div class = "col-xs-1 text-center">
+				<button id = "D" class = "btn btn-secondary btn-sm">Descending</button>
+			</div>
+
+			<div class = "col-xs-1 text-center">
+				<button id = "A" class = "btn btn-secondary btn-sm">Ascending</button>
+			</div>
+
 		</div>
 
 
